--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -26,9 +26,7 @@
     color: #4a148c;
     font-size: 34px;
     text-align: center;
-    position: absolute;
-    top: 290px;
-    left: 40%;
+    position: relative;
 }
 
 .form-label {
