--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,21 +5,15 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
-@import url('https://fonts.googleapis.com/css2?family=Alata&family=Gantari&family=Jost:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Alata&family=Gantari&family=Jost:wght@400;700&display=swap'); */
 
 .home_body {
   /*padding: 20px;*/
   font-family: 'Gantari', sans-serif;
+  overflow-x: hidden;
 }
 
-.cuadrado {
-  width: 287px;
-  height: 400px;
-  position: absolute;
-  z-index: 0;
-  right: 0;
-  background-image: linear-gradient(#3E2F9C, #553CA9, #6445AC, #6F4CB0);
-}
+
 
 /*Sección Principal*/
 
@@ -35,26 +29,32 @@
 
 .cuadrado {
   width: 287px;
-  height: 44.5%;
+  height: 78%;
   position: absolute;
   z-index: 0;
   right: 0;
   background: linear-gradient(#3E2F9C, #553CA9, #6445AC);
 }
+.container-first-section{
+  padding: 40px 15px 50px;
+}
 
 .btn-appointment {
-  display: inline-block;
-  background:#3E2F9C;
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 12px 24px;
-  border-radius: 25px;
-  text-align: center;
-  cursor: pointer;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease-in-out;
-  font-family: 'Jost', sans-serif;
+  background: #3E2F9C;
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+    padding: 18px;
+    border-radius: 25px;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    font-family: 'Jost', sans-serif;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .btn-appointment:hover {
@@ -66,13 +66,13 @@
   height: auto;
   z-index: 1;
   position: relative;
-  left: 150px;
+  left: 65px;
 }
 
 .hero-text {
   flex: 1 1 40%;
-  max-width: 100%;
-  padding: 20px;
+  /* max-width: 100%; */
+  /* padding: 20px; */
   color: #3E2F9C;
   font-family: 'Gantari', sans-serif;;
 }
@@ -83,13 +83,6 @@
   font-family: 'Alata', sans-serif;
 }
 
-.hero-image {
-  flex: 1 1 50%;
-  max-width: 100%;
-  padding: 20px;
-  text-align: center;
-}
-
 .hero-image img {
   max-width: 100%;
   height: auto;
@@ -97,6 +90,9 @@
 }
 
 /* What do we do? */
+.content-w-w-d{
+  padding: 30px 15px 40px;
+}
 .what-we-do {
   text-align: center;
   padding: 20px;
@@ -106,11 +102,19 @@
   margin-bottom: 20px;
   color: #3e2f9c;
   font-family: 'Alata', sans-serif;
+  font-size: 34px;
 }
 
 .what-we-do p {
   color: #3E2F9C;
   font-family: 'Gantari', sans-serif;
+}
+.big-text-what-we-do{
+  width: 100%;
+  padding: 15px;
+}
+.big-text-what-we-do{
+  text-align: justify;
 }
 
 /* Carousel */
@@ -156,7 +160,7 @@
 }
 
 .carousel-caption p {
-  color: #624af2;
+  color: #553CA9;
   font-size: 1rem;
   font-family: 'Gantari', sans-serif;
 }
@@ -174,6 +178,8 @@
   height: 2.5rem;
 }
 
+
+
 /* Find Your Doctor */
 .find-doctor {
   text-align: center;
@@ -181,7 +187,7 @@
 }
 
 .find-doctor h2 {
-  font-size: 1.8rem;
+  font-size: 34px;
   color: #3e2f9c;
   font-family: 'Alata', sans-serif;
 }
@@ -194,7 +200,7 @@
 }
 
 .search-input {
-  width: 30%;
+  width: 50%;
   padding: 10px;
   border: 2px solid #CDC7ED;
   background-color: #CDC7ED;
@@ -202,6 +208,10 @@
   outline: none;
   font-size: 1rem;
   font-family: 'Alata', sans-serif;
+  color: #3e2f9c;
+}
+.search-input::placeholder{
+  color: rgba(62, 47, 156, 0.66);
 }
 
 .search-button {
@@ -223,6 +233,7 @@
 .medical-suggestions {
   text-align: center;
   padding: 40px;
+  
 }
 
 .medical-suggestions h2 {
@@ -233,11 +244,14 @@
 
 .suggestion {
   font-size: 1.2rem;
-  color: #3E2F9C;
+  color: rgba(62, 47, 156, 0.7);
   margin-top: 20px;
   padding: 20px;
-  font-style: italic;
   font-family: 'Alata', sans-serif;
+}
+.doctor-h-name{
+  font-family: 'Gantari', serif;
+  font-size: 18px;
 }
 
 /* Media Queries */
@@ -262,4 +276,59 @@
   .medical-suggestions {
     padding: 20px;
   }
+  .cuadrado{
+    display: none;
+  }
+  .hero-image img{
+    display: none;
+  } 
+  .content-w-w-d{
+    padding: 15px 20px 15px 30px;
+  }
+  .what-we-do{
+    padding:30px 0 0 0;
+  }
 }
+
+@media (min-width: 1220px){
+  .cuadrado{
+    height: 53%;
+  }
+}
+@media (min-width: 1100px){
+  .cuadrado{
+    height: 70%;
+  }
+}
+@media (min-width: 1280px){
+  .cuadrado{
+    height: 53%;
+  }
+}
+@media (min-width: 1120px){
+  .cuadrado{
+    height: 69.9%;
+  }
+}
+@media (min-width: 1138px){
+  .cuadrado{
+    height: 60.1%;
+  }
+}
+@media (min-width: 800px){
+  .cuadrado{
+    height: 45.8%;
+  }
+}
+@media (min-width: 1024px){
+  .cuadrado{
+    height: 34.3%;
+  }
+}
+@media (min-width: 853px){
+  .cuadrado{
+    height: 42.2%;
+  }
+}
+
+
