--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -10,6 +10,9 @@
     overflow: auto;
     padding: 15px;
 }
+.content-card-login{
+    flex-direction: column;
+}
 
 .login-card {
     padding: 2rem;
@@ -26,9 +29,9 @@
     color: #4a148c;
     font-size: 34px;
     text-align: center;
-    position: absolute;
-    top: 290px;
-    left: 40%;
+    /* position: absolute;
+    top: 214px;
+    left: 28%; */
 }
 
 .form-label {
